athena/test/corpus/vacuum_partition.txt
================================================================================
VACUUM table
================================================================================

VACUUM iceberg_t;

--------------------------------------------------------------------------------

(program
  (statement
    (vacuum_statement
      (keyword_vacuum)
      (object_reference
        name: (identifier)))))

================================================================================
ALTER TABLE ADD PARTITION with LOCATION
================================================================================

ALTER TABLE t ADD PARTITION (dt='2024') LOCATION 's3://b/p';

--------------------------------------------------------------------------------

(program
  (statement
    (alter_table
      (keyword_alter)
      (keyword_table)
      (object_reference
        name: (identifier))
      (keyword_add)
      (keyword_partition)
      (identifier)
      (literal)
      (keyword_location)
      (literal))))
